--- a/general-style.css
+++ b/general-style.css
@@ -28,3 +28,23 @@ h2 {
     margin-top: 20px;
     margin-bottom: 8px;
 }
+
+h3 {
+    font-weight: normal;
+    font-size: 1.4em;
+    margin-top: 16px;
+    margin-bottom: 4px;
+}
+
+i {
+    font-style: italic;
+}
+
+note {
+    font-style: italic;
+    color: #bbbbbb;
+}
+
+a {
+    color: white;
+}
