--- a/general-style.css
+++ b/general-style.css
@@ -36,8 +36,25 @@ h3 {
     margin-bottom: 4px;
 }
 
+h4 {
+    font-weight: bold;
+    font-size: 1.1em;
+    margin-top: 16px;
+    margin-bottom: 0px;
+}
+
 i {
     font-style: italic;
+}
+
+b {
+    font-weight: bold;
+}
+
+ul {
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-bottom: 10px;
 }
 
 note {
@@ -46,5 +63,30 @@ note {
 }
 
 a {
-    color: white;
+    color: inherit;
+}
+
+iframe {
+    border: none;
+}
+
+.video {
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+th {
+    font-weight: bold;
+    padding: 5px 20px 5px 10px;
+    border-bottom: 2px solid #aaaaaa;
+}
+
+td {
+    border-top: 1px solid #aaaaaa;
+    padding: 5px 20px 5px 10px;
 }
