--- a/leaderboards.css
+++ b/leaderboards.css
@@ -1,3 +1,24 @@
+/* LOADING PAGE */
+body {
+    height: 90vh;
+}
+
+#loading-page {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loading-text {
+    padding: 8px;
+    font-weight: bold;
+    font-size: 1.5em;
+    text-align: center;
+}
+
 #loading-bar-container {
     border: 1px solid #eeeeee;
     height: 10px;
@@ -8,4 +29,188 @@
     background-color: #eeeeee;
     height: 100%;
     width: 0%;
+}
+
+/* CHECKBOXES */
+#multi-category-div-inner {
+    display: flex;
+    flex-direction: row;
+}
+
+#multi-category-div-inner div {
+    padding-right: 35px;
+}
+
+#other-options-div-inner {
+    display: flex;
+    flex-direction: row;
+}
+
+#other-options-div-inner div {
+    padding-right: 35px;
+}
+
+.checkbox-column {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    display: block;
+    position: relative;
+    margin-top: 5px;
+    padding-left: 23px;
+    cursor: pointer;
+    font-size: 15px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+label input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 15px;
+    width: 15px;
+    background-color: rgb(100,100,100);
+}
+
+/* On mouse-over, add a grey background color */
+label:hover input ~ .checkmark {
+    background-color: rgb(115,115,115);
+}
+
+/* When the checkbox is checked, add a blue background */
+label input:checked ~ .checkmark {
+    background-color: rgb(100,0,0);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+label input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+label .checkmark:after {
+    left: 5px;
+    top: 2px;
+    width: 3px;
+    height: 6.5px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+/* SELECTORS */
+select {
+    background-color: rgb(38,38,38);
+    color: white;
+    border: none;
+    padding: 3px 30px 3px 3px;
+    margin: 2px 6px 4px 0px;
+}
+
+select option {
+    background-color: rgb(38,38,38);
+}
+
+select option:hover {
+    box-shadow: 0 0 10px 100px purple inset;
+}
+
+/* DATE INPUT */
+input[type=date] {
+    background-color: rgb(38,38,38);
+    color: white;
+    border: none;
+    padding: 3px 3px 3px 5px;
+    margin: 5px 6px 3px 0px;
+}
+
+input {
+    color-scheme: dark;
+}
+
+/* BUTTONS */
+button {
+    background-color: rgb(30,30,30);
+    color: rgb(220,220,220);
+    border: none;
+    cursor: pointer;
+    padding: 6px 8px 6px 8px;
+    margin: 5px 6px 3px 0px;
+    font-weight: bold;
+}
+
+#go-button {
+    background-color: rgb(90,0,0);
+}
+
+button:hover {
+    background-color: rgb(42,42,42);
+}
+
+#go-button:hover {
+    background-color: rgb(110,10,10);
+}
+
+/* GENERIC TABLE STYLE */
+table {
+    border-collapse: collapse;
+    border-style: hidden;
+}
+
+th {
+    font-weight: bold;
+    text-align: left;
+}
+
+table td, table th {
+    border: 1px solid #aaaaaa;
+    padding: 5px 20px 5px 10px;
+}
+
+/* ROW CLASSES */
+.row-header {
+    font-weight: bold;
+}
+.row-normal {
+    font-weight: normal;
+}
+.row-marked {
+    color: red;
+}
+
+/* COLUMN CLASSES */
+.column-date {
+    text-align: left;
+}
+.column-time {
+    text-align: right;
+}
+.column-place {
+    text-align: right;
+}
+.column-player {
+    text-align: left;
 }
